--- a/Api/package.json
+++ b/Api/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon Api/index.js",
+    "start": "node Api/index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
